Update failing tests for timer view model.